# habitmatic-bot

./: .env-example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/bot/: main_handlers.py  main_keyboard.py  run.py
src/bot/habits/: handlers.py  keyboards.py  states.py
src/repositories/: RedisRepository.py
src/services/: AsyncHttpService.py  RedisService.py  generators.py
src/settings/: config.py  main_settings_service.py
src/utils/: plurals.py
