[tool.poetry]
name = "habitmatic-bot"
version = "0.1.0"
description = ""
authors = ["Cosmic Onyx <c0sm1c0nyx.225@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
aiogram = "^3.22.0"
pydantic-settings = "^2.12.0"
redis = "^7.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
